// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChartSpecRenderer > matches snapshot for health-ratio-sweep 1`] = `
<div>
  <section
    aria-label="Collateralization Risk Margin Across ETH Prices"
    class="rounded-xl border border-slate-700 bg-surface-card p-4 shadow-sm"
  >
    <header
      class="mb-3"
    >
      <h3
        class="text-lg font-semibold text-slate-100"
      >
        Collateralization Risk Margin Across ETH Prices
      </h3>
      <p
        class="mt-1 text-sm text-slate-400"
      >
        Single-scenario sweep at current debt and protocol assumptions
      </p>
    </header>
    <div
      class="h-72 w-full"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%; min-width: 0;"
      />
      <table
        class="sr-only"
      >
        <caption>
          Collateralization Risk Margin Across ETH Prices
        </caption>
        <thead>
          <tr>
            <th>
              ETH price
            </th>
            <th>
              Collateralization risk margin
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              1900
            </td>
            <td>
              0.6
            </td>
          </tr>
          <tr>
            <td>
              2850
            </td>
            <td>
              0.9
            </td>
          </tr>
          <tr>
            <td>
              3800
            </td>
            <td>
              1.2
            </td>
          </tr>
          <tr>
            <td>
              4750
            </td>
            <td>
              1.5
            </td>
          </tr>
          <tr>
            <td>
              5700
            </td>
            <td>
              1.8
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <footer
      class="mt-3 text-xs text-slate-500"
    >
      <span>
        Source: 
        chainlink
         (
        ethPriceUsd
        ) ·
         
      </span>
      <span>
        Generated 
        2026-06-09T12:00:01Z
      </span>
    </footer>
  </section>
</div>
`;

exports[`ChartSpecRenderer > matches snapshot for liquidation-price-band 1`] = `
<div>
  <section
    aria-label="ETH Spot vs Collateral Recovery Threshold"
    class="rounded-xl border border-slate-700 bg-surface-card p-4 shadow-sm"
  >
    <header
      class="mb-3"
    >
      <h3
        class="text-lg font-semibold text-slate-100"
      >
        ETH Spot vs Collateral Recovery Threshold
      </h3>
    </header>
    <div
      class="h-72 w-full"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%; min-width: 0;"
      />
      <table
        class="sr-only"
      >
        <caption>
          ETH Spot vs Collateral Recovery Threshold
        </caption>
        <thead>
          <tr>
            <th>
              Price marker
            </th>
            <th>
              Collateral buffer
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              range
            </td>
            <td />
          </tr>
        </tbody>
      </table>
    </div>
    <footer
      class="mt-3 text-xs text-slate-500"
    >
      <span>
        Source: 
        chainlink
         (
        ethPriceUsd
        ) ·
         
      </span>
      <span>
        Generated 
        2026-06-09T12:00:01Z
      </span>
    </footer>
  </section>
</div>
`;

exports[`ChartSpecRenderer > matches snapshot for simulation-yield-projection 1`] = `
<div>
  <section
    aria-label="Gross/Net Protocol Return vs Stability Fees"
    class="rounded-xl border border-slate-700 bg-surface-card p-4 shadow-sm"
  >
    <header
      class="mb-3"
    >
      <h3
        class="text-lg font-semibold text-slate-100"
      >
        Gross/Net Protocol Return vs Stability Fees
      </h3>
      <p
        class="mt-1 text-sm text-slate-400"
      >
        Based on model assumptions — not live protocol guarantees
      </p>
    </header>
    <div
      class="h-72 w-full"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%; min-width: 0;"
      />
      <table
        class="sr-only"
      >
        <caption>
          Gross/Net Protocol Return vs Stability Fees
        </caption>
        <thead>
          <tr>
            <th>
              Month
            </th>
            <th>
              Gross protocol return (annualized)
            </th>
            <th>
              Cumulative stability fees
            </th>
            <th>
              Net protocol return (annualized)
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              0
            </td>
            <td>
              0
            </td>
            <td>
              0
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <td>
              6
            </td>
            <td>
              106.66
            </td>
            <td>
              105.56
            </td>
            <td>
              1.11
            </td>
          </tr>
          <tr>
            <td>
              12
            </td>
            <td>
              216.02
            </td>
            <td>
              211.11
            </td>
            <td>
              4.91
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <footer
      class="mt-3 text-xs text-slate-500"
    >
      <span>
        Source: 
        chainlink
         (
        ethPriceUsd
        ) ·
         
      </span>
      <span>
        Generated 
        2026-06-09T12:00:01Z
      </span>
    </footer>
  </section>
</div>
`;
